# Finding-the-reasons-for-resignation-at-Technova-Partners

./: README.md
fichiers/: donnéesDeFusion.csv
notebooks/: ModelisationSansStrategie.ipynb  ModelisationStrategique.ipynb
poetry/: pyproject.toml
