[tool.poetry]
name = "projet-4"
version = "0.1.0"
description = "Projet de Modelisation"
authors = ["LyAbdourahmane <lyabdourahamane66@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.3.1"
seaborn = "^0.13.2"
matplotlib = "^3.10.5"
scikit-learn = "^1.7.1"
imblearn = "^0.0"
scipy = "^1.16.1"
shap = "^0.48.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"